--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,9 +1,6 @@
 body {
     box-sizing: border-box;
     margin: 0;
-}
-
-.wrapper {
     background-image: url(https://images.unsplash.com/photo-1458560871784-56d23406c091?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
     background-size: cover;
     background-repeat: no-repeat;
@@ -72,9 +69,11 @@ label, p {
     font-size: 20px;
 }
 
-nav {
+.nav {
+    padding-left: 22vw;
+    width: 40vw;
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
 }
 
 a {
