continious work with routing

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -34,6 +34,10 @@ main {
     align-items: center;
 }
 
+.searchList {
+    height: 20vh;
+}
+
 .player {
     padding-top: 30px;
     display: flex;    
