--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -13,6 +13,12 @@ h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+h2 {
+    padding-top: 30px;
+    margin: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 main {
     width: 70vw;  
     margin: 0vh 10vw 0vh 10vw;
@@ -35,7 +41,20 @@ main {
 }
 
 .searchList {
-    height: 20vh;
+    height:30px;
+    padding-bottom: 5px;
+}
+
+.nowPlaying {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2vhpx;
+    font-weight: bold;
+    padding-top: 10px;
+}
+
+.nowPlayingText {
+    display: flex;
+    justify-content: center;
 }
 
 .player {
@@ -98,5 +117,12 @@ a {
     font-size: 2vh;
     padding-right: 2vh;
     padding-left: 2vh;
+}
+
+.about{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
